tests/parser/tests/cases/should_fail/malformed_access_name/case.stderr
error: failed to parse
 --> $DIR/case.hash:7:7
6 |   
7 |   a::b:c()
  |         ^^ here
  = note: unexpectedly encountered a `(...)`.
  = help: consider adding a `;`
